--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,7 @@ h1, h2, h3 {
 }
 
 .content__card--small figure {
+  min-width: 115px;
   width: 115px;
   height: 54px;
   padding: 0px;
@@ -471,6 +472,13 @@ h1, h2, h3 {
   .navbar__search-icon {
     display: block;
     cursor: pointer;
+  }
+
+  /* News */
+
+  .content__popular-posts,
+  .content__categories {
+    max-width: 325px;
   }
 }
 
