--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,12 @@
   align-items: center;
 }
 
-h1, h2, h3 {
+h1, h2 {
   margin: 0;
+}
+
+h3 {
+  margin: 2px 0;
 }
 
 .navbar__logo {
@@ -33,7 +37,7 @@ h1, h2, h3 {
 }
 
 .navbar__links,
-.navbar__close-icon {
+.navbar__close {
   display: none;
 }
 
@@ -176,7 +180,7 @@ h1, h2, h3 {
   align-items: center;
   padding-inline: 10px;
   cursor: pointer;
-  transition: all .4s;
+  transition: all .3s;
 }
 
 .navbar__link {
@@ -441,8 +445,9 @@ h1, h2, h3 {
       "ap ct"
   }
 
-  .navbar__burger-icon {
-    display: none;
+  .navbar__burger-icon,
+  .navbar__close {
+    display: none !important;
   }
 
   .navbar__links {
